--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 <h1>Zach Morse</h1>
+
+<p>
+	I am Zach Morse, originally from Cheyenne, Wyoming but currently residing in Nashville, TN. Previous to joining TIY,
+	I was a truck driver, Frac Hand, and professional touring bassist. I am into coding because I enjoy work that combines
+	technical know-how applied to creative problems.
+</p>
