added programming languages and github profile link

--- a/index.html
+++ b/index.html
@@ -5,3 +5,9 @@
 	I was a truck driver, Frac Hand, and professional touring bassist. I am into coding because I enjoy work that combines
 	technical know-how applied to creative problems.
 </p>
+
+<h3>Programming Languages</h3>
+<p>Languages I'd like to learn include: Javascript, Python, and C++</p>
+
+
+<a href="https://github.com/YOURUSERNAMEHERE" target="_blank">My Github Profile</a>
