fixed typo on hyperlink

--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@
 <p>Languages I'd like to learn include: Javascript, Python, and C++</p>
 
 
-<a href="https://github.com/YOURUSERNAMEHERE" target="_blank">My Github Profile</a>
+<a href="https://github.com/zachmorse" target="_blank">My Github Profile</a>
